# GitSwipe

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DESIGN_SYSTEM.md  README.md  ROADMAP.md  pyproject.toml  tasks.md
mobile/: README.md  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/kotlin/com/example/git_swipe/: MainActivity.kt
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/models/: repository.dart
mobile/lib/screens/: ai_insight_screen.dart  guide_chat_screen.dart  login_screen.dart  preferences_screen.dart  repo_deep_dive_screen.dart  saved_repos_screen.dart  swipe_feed_screen.dart
mobile/lib/theme/: app_theme.dart
mobile/lib/widgets/: bottom_nav_bar.dart  shared_widgets.dart
mobile/linux/: CMakeLists.txt
mobile/linux/runner/: my_application.cc
mobile/macos/Runner.xcodeproj/: project.pbxproj
mobile/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
mobile/macos/Runner/Configs/: AppInfo.xcconfig
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
mobile/windows/runner/: Runner.rc  main.cpp
